Capture App Name from Android application
